# dbguide

./: .gitignore  EXEMPLO_USO_DBGUIDE.md  README.md  build_indexes.py  main.py  pyproject.toml  run_app.py
dbguide/: __init__.py
dbguide/app/: llm.py  llm_compat.py  prompts.py  prompts_compat.py  retrieval.py  retrieval_compat.py  safety.py  safety_compat.py  streamlit_app.py  streamlit_app_refactored.py
dbguide/corpus/pattern_cards/: pattern_example_basic.md
dbguide/corpus/query_cards/: query_example_basic.md
dbguide/domain/: __init__.py  interfaces.py
dbguide/ingest/: build_index.py
dbguide/models/: __init__.py  document.py
dbguide/services/: __init__.py  document_loader.py  indexing.py  llm_providers.py  metadata_filter.py  prompt_builder.py  retrieval_service.py  sql_validator.py
scripts/: lora_mistral7b_example.py
