[project]
name = "dbguide"
version = "0.1.0"
description = "dbguide: An AI-powered SQL assistant for your databases."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "sqlglot>=28.5.0",
    "streamlit>=1.52.2",
    "openai>=1.0.0",
    "transformers>=4.45.0",
    "datasets>=3.0.0",
    "peft>=0.13.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.43.0",
]
